# Potato

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL_DEPENDENCY.py  README.md
CMake/: LibraryTools.cmake  ModuleRule.cmake
CMake/FindCMakeConfig/: FindGraphicAPI.cmake  FindSDL3.cmake
Editor/: CMakeLists.txt  Main.cpp
Engine/: CMakeLists.txt
Engine/Launcher/: CMakelists.txt  Main.cpp
Engine/Modules/: CMakeLists.txt
Engine/Runtime/: CMakeLists.txt  README-ZH-CN.md  README.md  Runtime.cpp  Runtime.hpp
Engine/Runtime/Core/: CMakeLists.txt  Core.h  CoreImpl.h
Engine/Runtime/Core/Bus/: A.hpp  Bus.h  Coroutine.h  Coroutine.hpp  EventBus.h  EventBus.hpp  MPMCQueue.hpp
Engine/Runtime/Core/CoreDefination/: .hpp  CMakelists.txt  CompilerHint.h  MarcoArgsNum.h  StaticTools.hpp  TypeTraits.hpp
Engine/Runtime/Core/Entity/: AABB.h
Engine/Runtime/Core/GameObject/: GameObject.h
Engine/Runtime/Core/Math/: CMakelists.txt  Color.h  Math.h  MathConstant.h  MathFunctions.h  Random.h  Vector.h
Engine/Runtime/Core/Math/Detail/: FunctionsDetail.h  RandomDetail.h
Engine/Runtime/Core/ModuleManager/: CMakeLists.txt  ModuleAPI.h
Engine/Runtime/Core/ModuleManager/Source/: ModuleManager.cpp
Engine/Runtime/Core/Reflection/: Refect.h
Engine/Runtime/Core/SoA/: CMakelists.txt  SoaDynamicArray.h
Engine/Runtime/Core/ThreadPool/: ThreadPool.h
Engine/Runtime/Core/soa_array/: SoaDynamicArray.h  soa_array.h
Engine/Runtime/Include/Core/: CMakeLists.txt  CoreAPI.hpp
Engine/Runtime/Include/Core/Entity/: BoundingBox.h
Engine/Runtime/Include/Core/ModuleManager/: ModuleManager.h
Engine/Runtime/Include/Vulkan/: VulkanContext.hpp
Engine/Runtime/Render/: CMakeLists.txt  RenderSystem.h
Engine/Runtime/Render/VulkanRHI/: VulkanTools.hpp
Engine/Runtime/SoilCore/: CMakelists.txt  NativeApplication.h  NativeWindow.h  SWidget.h  SWindow.h
Engine/Runtime/SoliCore/: CMakelists.txt
Engine/Runtime/Source/Core/ModuleManager/: ModuleManager.cpp
Engine/Runtime/Source/Render/: RenderSystem.cpp
Engine/Runtime/Source/Vulkan/: VulkanContext.cpp
Game/: CMakeLists.txt
Game/Source/: GameMain.cpp
Intern/Core/: CMakeLists.txt  Number.hpp  Optional.hpp  Proj.hpp
Intern/Core/Mem/: Memory.hpp
Intern/Core/Platform/: PlatformDef.hpp  Windows.hpp
Intern/Core/Traits/: TraitsTools.hpp  TypeTraits.hpp  TypeTraitsImpl.hpp
Intern/Core/UnitTest/: TestOptional.cpp
PythonTools/CodeGen/: MacroArgsNum.py
Runtime/: CMakeLists.txt  Runtime.cpp  Runtime.hpp
Runtime/Core/: Core.hpp  CoreAPI.hpp  dummy.cpp
Runtime/Core/Entity/: AABB.h  BoundingBox.h
Runtime/Core/Entity/Mesh/: Mesh.h
Runtime/Core/Foundation/: Allocator.h
Runtime/Core/Math/: Vector.h
Runtime/Render/: CMakeLists.txt  RenderSystem.cpp  RenderSystem.hpp
Runtime/Vulkan/: CMakeLists.txt  VulkanContext.cpp
